--- a/test-gradle/master-proj/build.gradle
+++ b/test-gradle/master-proj/build.gradle
@@ -3,10 +3,12 @@ allprojects {
   apply plugin: 'eclipse'
   
   repositories {
+    flatDir {
+    	dirs "$rootDir/libs"
+    }
     mavenCentral()
   }
 }
-
 
 
 [':bl', ':dao', ':rest'].each { pn ->
@@ -14,8 +16,11 @@ allprojects {
 		dependencies {
 			compile 'org.springframework:spring-context:4.1.0.RELEASE'
 			compile project(':be')
+			compile 'commons-collections:commons-collections:3.2.1'
+			compile 'xpp3:xpp3:1.1.4'
+			runtime files('../libs/commons-fileupload-1.3.1.jar')
 			testCompile group: 'junit', name: 'junit', version: '4.+'
 			testCompile 'org.springframework:spring-test:4.1.0.RELEASE'
 		}
 	}
-}
+}	
